--- a/src/styles/pages/blog/blog.scss
+++ b/src/styles/pages/blog/blog.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 300vh;
+  // height: 300vh;
   background-color: #f7f8f9;
   .insideblog {
     margin-top: 3%;
@@ -31,10 +31,10 @@
       height: 90%;
       display: grid;
       grid-template-columns: repeat(auto-fill, 250px);
-position: relative;
-left: 50%;
-transform: translateX(-50%);
-grid-row: 10px;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      grid-row: 10px;
 
       // background-color: blue;
       // flex-direction: column;
@@ -46,7 +46,7 @@ grid-row: 10px;
         background-color: white;
         grid-row-end: span 26;
         display: flex;
-border-radius: 16px;
+        border-radius: 16px;
         margin: 10px 15px;
         // width: 20%;
         // display: flex;
@@ -54,9 +54,9 @@ border-radius: 16px;
         // justify-content: center;
         // background-color: white;
         // flex-grow: 0;
-        box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.22);
--webkit-box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.22);
--moz-box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.22);
+        box-shadow: 0px 13px 5px 0px rgba(0, 0, 0, 0.22);
+        -webkit-box-shadow: 0px 13px 5px 0px rgba(0, 0, 0, 0.22);
+        -moz-box-shadow: 0px 13px 5px 0px rgba(0, 0, 0, 0.22);
         &:nth-child(even) {
           grid-row-end: span 26;
           // height: 32%;
@@ -82,7 +82,7 @@ border-radius: 16px;
           //   height: 30%;
           // }
         }
-        &:nth-child(3n){
+        &:nth-child(3n) {
           grid-row-end: span 30;
         }
         .topblogimage {
