adding a new products page

--- a/src/example/pinterestlayout/layout.scss
+++ b/src/example/pinterestlayout/layout.scss
@@ -9,7 +9,7 @@
   grid-row: 10px;
   // background-color: red;
   .card {
-    background-color: red;
+    background-color: white;
     grid-row-end: span 26;
     display: flex;
     border-radius: 16px;
