--- a/src/styles/layout/nav/loginmodal/loginModal.scss
+++ b/src/styles/layout/nav/loginmodal/loginModal.scss
@@ -1,7 +1,7 @@
 .renderlogin{
   display: flex;
   flex-direction: column;
-  width: inherit;
+  // width: 35%;
   height: inherit;
   // background-color: red;
   .loginheader{
@@ -16,7 +16,7 @@
       background-color: white;
       // margin-left: 3%;
       width: 40%;
-      height: 100%;
+      height: 40px;
       // cursor: pointer;
       span{
         font-size: 16px;
@@ -28,7 +28,7 @@
       // margin-left: 3%;
       background-color: #00AEFF;
       width: 40%;
-      height: 100%;
+      height: 40px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -45,7 +45,7 @@
     }
     button{
       width: 20%;
-      height: 100%;
+      height: 40px;
       display: flex;
       justify-content: center;
       margin-left: 30%;
@@ -57,6 +57,14 @@
       align-items: center;
       border-left: 1px solid #33BEFF;
     }
+  }
+  .alert{
+    margin-left: 8%;
+    // background-color: red;
+    // height: 30px;
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
   }
   .loginmiddle{
     margin-top: 8%;
@@ -92,7 +100,8 @@
     display: flex;
     flex-direction: column;
     .loginsigininbutton{
-      height: 40%;
+      // height: 40% 
+      height: 40px;;
       width: 90%;
       background-color: #00AEFF;
       color: white;
