--- a/src/styles/layout/nav/registermodal/registerModal.scss
+++ b/src/styles/layout/nav/registermodal/registerModal.scss
@@ -17,7 +17,7 @@
       background-color:#00AEFF;
       // margin-left: 3%;
       width: 40%;
-      height: 100%;
+      height: 40px;
       cursor: pointer;
       span{
         font-size: 16px;
@@ -27,7 +27,7 @@
     .registertext{
       background-color: white;
       width: 40%;
-      height: 100%;
+      height: 40px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -56,6 +56,13 @@
       align-items: center;
       border-left: 1px solid #33BEFF;
     }
+  }
+  .alert{
+    display: flex;
+    margin-left: 8%;
+
+    flex-direction: column;
+    // align-items: center;
   }
   .registermiddle{
     // background-color: red;
@@ -91,7 +98,7 @@
     // background-color: red;
     flex-direction: column;
     .registersigininbutton{
-      height: 40%;
+      height: 40px;
       width: 90%;
       background-color: #00AEFF;
       color: white;
