--- a/src/styles/layout/nav/loginmodal/loginModal.scss
+++ b/src/styles/layout/nav/loginmodal/loginModal.scss
@@ -98,6 +98,7 @@
     margin-top: 4%;
     margin-left: 8%;
     display: flex;
+    margin-bottom: 5%;
     flex-direction: column;
     .loginsigininbutton{
       // height: 40% 
