--- a/src/styles/layout/nav/registermodal/registerModal.scss
+++ b/src/styles/layout/nav/registermodal/registerModal.scss
@@ -95,6 +95,7 @@
     margin-top: 4%;
     margin-left: 8%;
     display: flex;
+    margin-bottom: 5%;
     // background-color: red;
     flex-direction: column;
     .registersigininbutton{
