login age is done storing the user and also showing the process wiht circular progess indicatior next to cart and register age songs by MAD VILLIANY

--- a/src/styles/layout/nav/loginmodal/loginModal.scss
+++ b/src/styles/layout/nav/loginmodal/loginModal.scss
@@ -1,7 +1,7 @@
 .renderlogin{
   display: flex;
   flex-direction: column;
-  // width: 35%;
+  width: 33.4%;
   height: inherit;
   // background-color: red;
   .loginheader{
