need to get back to carts since it has a big problem but now switucing to uloads to make the pages.

--- a/src/styles/layout/nav/navbar.scss
+++ b/src/styles/layout/nav/navbar.scss
@@ -3,6 +3,7 @@
   width: 100%;
   overflow: visible;
   background-color: #004274;
+  // background-color: #8ed1fc;
   transition: all 1s ease;
 
   .navitems {
