--- a/src/example/sellingproducts/selling.scss
+++ b/src/example/sellingproducts/selling.scss
@@ -38,6 +38,20 @@
     .sellingcardbottom {
       // height: 30%;
     // background-color: red;
+    &:hover{
+      .buy{
+        display: flex;
+        position: relative;
+        // left: 20%;
+        top: -25%;
+        left: 60%;
+        width: 40px;
+        // height: 20px;
+        // background-color: red;
+        cursor: pointer;
+      }
+    }
+
       margin-left: 3%;
       margin-top: 3%;
       margin-right: 3%;
@@ -46,6 +60,11 @@
       justify-content: space-around;
       span {
         font-size: 12px;
+      }
+      .buy{
+        display: none;
+        // position: relative;
+        
       }
       .sellingcardbottomtop {
         display: flex;
