done with the pop up menu that laos logsout

--- a/src/styles/layout/nav/navbar.scss
+++ b/src/styles/layout/nav/navbar.scss
@@ -143,6 +143,19 @@
       .accountcircle:hover {
         color: #00aeff;
       }
+      .lines{
+        
+        flex: 0.1;
+
+        display: flex;
+      align-items: center;
+        background-color: red;
+        .user{
+          background-color: #BFBFBF;
+  
+        }
+      }
+      
       .create {
         button {
           cursor: pointer;
