--- a/src/styles/profile/product/create/createproduct.scss
+++ b/src/styles/profile/product/create/createproduct.scss
@@ -7,13 +7,13 @@
   .createproductheader{
     display: flex;
     align-items: center;
-    background-color: #00AEFF;
+    background-color: #2d2d2d;
     height: 12%;
     justify-content: space-between;
     .createproducttext{
       cursor: pointer;
       // margin-left: 3%;
-      background-color: #00AEFF;
+      background-color: #2d2d2d;
       width: 40%;
       height: 40px;
       display: flex;
@@ -37,12 +37,12 @@
       justify-content: center;
       margin-left: 30%;
       border: none;
-      background-color: #00AEFF;
+      background-color: #2d2d2d;
       color: white;
       cursor: pointer;
       display: flex;
       align-items: center;
-      border-left: 1px solid #33BEFF;
+      // border-left: 1px solid #33BEFF;
     }
   }
   .alert{
@@ -57,6 +57,7 @@
     margin-top: 5%;
     margin-left: 8%;
     margin-right: 5%;
+    margin-bottom: 5%;
     // background-color: red;
     display: flex;
 		.createproductimageplus {
@@ -86,18 +87,20 @@
 		}
 	}
   .createproductmiddle{
+    // background-color: red;
     margin-top: 3%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction:row;
     margin-left: 8%;
+    margin-right: 5%;
     .createproducttextfield{
       // height: 20%;
-      width: 90%;
+      margin-right: 3%;
+      width: 40%;
+      margin-bottom: 2%;
     }
-    .createproducttextfield:nth-child(2){
-      width:90%;
-      margin-top: 3%;
-    }
+    
     .createproductrememberme{
       margin-top: 4%;
       width: 90%;
