--- a/src/styles/profile/userprofile.scss
+++ b/src/styles/profile/userprofile.scss
@@ -130,6 +130,15 @@
               color: white;
               cursor: pointer;
             }
+            .deleteuserprofile{
+              background-color: #DC3545;
+              border: none;
+              width: 30%;
+              height: 40px;
+              border-radius: 4px;
+              color: white;
+              cursor: pointer;
+            }
           }
         }
       }
